# text_detector

./: CMakeLists.txt  FaceDetectorDNN.cpp  FaceDetectorDNN.h  README.md  conanfile.txt  main.cpp
include/: FaceDetectorCascade.h  FaceDetectorDNN.h
source/: FaceDetectorCascade.cpp  FaceDetectorDNN.cpp  main.cpp
